Fri Nov  4 10:31:15 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/SmartProxies/Smart_Proxies.h:
	* tao/SmartProxies/Smart_Proxies.inl:
	* tao/Strategies/DIOP_Acceptor.cpp:
	* tao/Strategies/DIOP_Acceptor.h:
	* tao/Strategies/DIOP_Acceptor.i:
	* tao/Strategies/DIOP_Connection_Handler.cpp:
	* tao/Strategies/DIOP_Connection_Handler.h:
	* tao/Strategies/DIOP_Connector.cpp:
	* tao/Strategies/DIOP_Connector.h:
	* tao/Strategies/DIOP_Endpoint.cpp:
	* tao/Strategies/DIOP_Endpoint.h:
	* tao/Strategies/DIOP_Endpoint.i:
	* tao/Strategies/DIOP_Factory.cpp:
	* tao/Strategies/DIOP_Factory.h:
	* tao/Strategies/DIOP_Profile.cpp:
	* tao/Strategies/DIOP_Profile.h:
	* tao/Strategies/DIOP_Transport.cpp:
	* tao/Strategies/DIOP_Transport.h:
	* tao/Strategies/FIFO_Connection_Purging_Strategy.cpp:
	* tao/Strategies/FIFO_Connection_Purging_Strategy.h:
	* tao/Strategies/LFU_Connection_Purging_Strategy.cpp:
	* tao/Strategies/LFU_Connection_Purging_Strategy.h:
	* tao/Strategies/LF_Strategy_Null.cpp:
	* tao/Strategies/LF_Strategy_Null.h:
	* tao/Strategies/NULL_Connection_Purging_Strategy.cpp:
	* tao/Strategies/NULL_Connection_Purging_Strategy.h:
	* tao/Strategies/SCIOP_Acceptor.cpp:
	* tao/Strategies/SCIOP_Acceptor.h:
	* tao/Strategies/SCIOP_Acceptor.i:
	* tao/Strategies/SCIOP_Connection_Handler.cpp:
	* tao/Strategies/SCIOP_Connection_Handler.h:
	* tao/Strategies/SCIOP_Connector.cpp:
	* tao/Strategies/SCIOP_Connector.h:
	* tao/Strategies/SCIOP_Endpoint.cpp:
	* tao/Strategies/SCIOP_Endpoint.h:
	* tao/Strategies/SCIOP_Endpoint.i:
	* tao/Strategies/SCIOP_Factory.cpp:
	* tao/Strategies/SCIOP_Factory.h:
	* tao/Strategies/SCIOP_Lite_Factory.cpp:
	* tao/Strategies/SCIOP_Lite_Factory.h:
	* tao/Strategies/SCIOP_Profile.cpp:
	* tao/Strategies/SCIOP_Profile.h:
	* tao/Strategies/SCIOP_Transport.cpp:
	* tao/Strategies/SCIOP_Transport.h:
	* tao/Strategies/SHMIOP_Acceptor.cpp:
	* tao/Strategies/SHMIOP_Acceptor.h:
	* tao/Strategies/SHMIOP_Connection_Handler.cpp: